k8s/service.yaml
# This is a Kubernetes Service configuration file. It defines a Service resource named "cloudship-service" in the "cloudship" namespace. The Service is of type ClusterIP and selects pods with the label "app: cloudship". It exposes port 80 and forwards traffic to target port 5000 on the selected pods. The Service also includes an annotation for the Application Load Balancer (ALB) health check path. You can apply this configuration to your Kubernetes cluster using the command `kubectl apply -f k8s [...]

apiVersion: v1
kind: Service
metadata:
  name: cloudship-service
  namespace: cloudship
  labels:
    app: cloudship
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  type: ClusterIP
  selector:
    app: cloudship
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
